ApiClient fixed and final settings for the web page. The total price updates depending on the price of the selected products
